--- a/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/DepotList.cshtml
@@ -217,7 +217,7 @@
             //alert();
             debugger;
             e.preventDefault()
-            clearCtrlDepot();
+            //clearCtrlDepot();
             var row = $(this).parent().parents('tr');
             var td1 = row.find('td:eq(1)').html();
             //var td2 = row.find('td:eq(2)').html();
