--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -260,7 +260,7 @@
                                                                 <label>SubTotal</label>
                                                                 <input type="number" id="ddlttprice" name="ddlttprice" class="form-control form-control-sm" readonly />
                                                             </div>
-                                
+
 
                                                             <div class="col-md-2">
                                                                 <div class="form-group">
@@ -274,25 +274,32 @@
                                                                     </div>
                                                                 </div>
                                                                 @*<div class="form-group">
-            <label for="ddlexpdate">Exp Date</label>
-            <input type="date" class="form-control" id="ddlexpdate" placeholder="Expire Date">
-            <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
-        </div>*@
+                            <label for="ddlexpdate">Exp Date</label>
+                            <input type="date" class="form-control" id="ddlexpdate" placeholder="Expire Date">
+                            <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
+                        </div>*@
                                                             </div>
 
 
 
-                                                            <div class="col-md-1">
-                                                                <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
-                                                                <div class="clearfix">
-                                                                    <button type="submit" class="btn btn-sm btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
-                                                                </div>
-                                                            </div>
+                                                            @*<div class="col-md-1">
+                        <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
+                        <div class="clearfix">
+                            <button type="submit" class="btn btn-sm btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
+                        </div>
+                    </div>*@
                                                         </div>
 
-                                                        </div>
+                                                    </div>
 
 
+                                                </div>
+
+                                                <div class="col-md-12">
+                                                    <label for="" class="control-label  font-weight-bold" style="visibility:hidden">Add</label>
+                                                    <div class="clearfix">
+                                                        <button type="submit" class="btn btn-sm float-right btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
