--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -20,7 +20,7 @@
                     <div class="tab-pane fade show active" id="custom-tabs-two-RawMaterialReturnList" role="tabpanel" aria-labelledby="custom-tabs-two-RawMaterialReturnList-tab">
                         <div class="row" style="margin-top:-15px">
                             <div class="col-md-12">
-                                <div class="card card-gray-dark">
+                                <div class="card card-navy">
                                     <div class="card-header">
                                         <div class="row">
                                             <div class="col-md-3">
@@ -40,20 +40,31 @@
                             <div class="col-md-12" style="margin-top:-10px">
                                 <div class="card card-navy">
                                     <div class="card-header">
-                                        <h6 class="card-title">Search By</h6>
-                                    </div>
-                                    <div class="card-body text-sm">
-                                        <div class="row" style="margin-top:-15px">
+                                        <div class="row">
+                                            <div class="col-md-2">
+                                                <h5 class="text-start">Search</h5>
+                                            </div>
 
-                                            <div class="col-md-3 float-right">
+                                            <div class="col-md-3 float-left">
                                                 <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
 
                                             </div>
-
-
                                         </div>
-
+                                       
                                     </div>
+                                    
+                                    @*<div class="card-body text-sm">
+            <div class="row" style="margin-top:-15px">
+
+                <div class="col-md-3 float-right">
+                    <input type="text" class="form-control form-control-sm" id="searchByAny" placeholder="Search by any" />
+
+                </div>
+
+
+            </div>
+
+        </div>*@
                                 </div>
                             </div>
                             <div class="col-md-12" style="margin-top:-10px">
