--- a/ERPWeb/Views/AgroConfiguration/_GetDueInvoicePartialView.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetDueInvoicePartialView.cshtml
@@ -7,7 +7,7 @@
 }
 
 
-<table class="table table-bordered table-sm table-striped table-responsive-lg text-sm" id="tblAgroSalesProductList">
+<table class="table  table-sm table-striped table-responsive-lg text-sm" id="tblAgroSalesProductList">
     <thead class="btn-dark">
         <tr class="text-center text-bold">
             <th style="vertical-align:middle">#SL</th>
@@ -24,29 +24,71 @@
         @foreach (var item in Model)
         {
             sl = sl + 1;
-            <tr>
-                <td class="text-center text-bold">@sl</td>
-                <td class="hide">@item.ProductSalesInfoId</td>
-                <td class="text-center">@item.InvoiceNo</td>
-                <td class="text-center">@item.InvoiceDate</td>
-                <td class="text-center">@item.TotalAmount</td>
-                <td class="text-center">@item.PaidAmount</td>
-                <td class="text-center">@item.DueAmount</td>
+            if ((DateTime.Now.Date - @item.InvoiceDate.Value.Date).Days < 4)
+            {
+                <tr style="background-color:#3deb67">
+                    <td class="text-center text-bold">@sl</td>
+                    <td class="hide">@item.ProductSalesInfoId</td>
+                    <td class="text-center">@item.InvoiceNo</td>
 
-                <td class="text-center">
+                    <td class="text-center">@item.InvoiceDate</td>
+                    <td class="text-center">@item.TotalAmount</td>
+                    <td class="text-center">@item.PaidAmount</td>
+                    <td class="text-center">@item.DueAmount</td>
 
-                    <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-ProductionSalesInfoId" title="Payment Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
-                        <i class="fas fa-eye"></i>
-                    </a>
+                    <td class="text-center">
 
-                    <a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="Payment" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
-                        <i class="fas fa-money-bill"></i>
-                    </a>
+                        <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-ProductionSalesInfoId" title="Payment Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        @if (item.DueAmount > 0)
+                        {
+                            <a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="Payment" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                                <i class="fas fa-money-bill"></i>
+                            </a>
+
+                        }
 
 
 
-                </td>
-            </tr>
+
+                    </td>
+                </tr>
+
+            }
+            else
+            {
+                <tr >
+                    <td class="text-center text-bold">@sl</td>
+                    <td class="hide">@item.ProductSalesInfoId</td>
+                    <td class="text-center">@item.InvoiceNo</td>
+
+                    <td class="text-center">@item.InvoiceDate</td>
+                    <td class="text-center">@item.TotalAmount</td>
+                    <td class="text-center">@item.PaidAmount</td>
+                    <td class="text-center">@item.DueAmount</td>
+
+                    <td class="text-center">
+
+                        <a href="#" class="btn btn-sm btn-outline-secondary data-item-detail-ProductionSalesInfoId" title="Payment Detail" data-item-detail-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                            <i class="fas fa-eye"></i>
+                        </a>
+                        @if (item.DueAmount > 0)
+                        {
+                            <a href="#" class="btn btn-sm btn-outline-primary data-item-Payment-ProductionSalesInfoId" title="Payment" data-item-Payment-ProductionSalesInfoId="@item.ProductSalesInfoId" style="line-height:1">
+                                <i class="fas fa-money-bill"></i>
+                            </a>
+
+                        }
+
+
+
+                    </td>
+                </tr>
+
+
+            }
+
         }
         @if (Model.Count() == 0)
         {
