--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -178,17 +178,10 @@
                                                             </div>
 
 
-                                                            @*<div class="col-md-6">
-                                                                <div class="form-group">
-                                                                    <label for="ddlInvoiceDate">Invoice Date</label>
-                                                                    <input type="date" class="form-control" id="ddlInvoiceDate" placeholder="Asign Date">
-                                                                    <span class="error hide req-ddlInvoiceDate font-weight-bold">date requered!</span>
-                                                                </div>
-                                                            </div>*@
                                                         <div class="col-md-6">
                                                             <div class="form-group">
                                                                 <label for="ddlInvoiceDate">Invoice Date</label>
-                                                                <div class="input-group date" id="datePicker">
+                                                                <div class="input-group-sm date" id="datePicker">
 
                                                                     <input type="text" class="form-control" id="ddlInvoiceDate" name="date" value="">
                                                                     <span class="input-group-addon">
@@ -265,7 +258,7 @@
                                                             <div class="col-md-2">
                                                                 <div class="form-group">
                                                                     <label for="ddlexpdate">Expire Date</label>
-                                                                    <div class="input-group date" id="datePicker">
+                                                                    <div class="input-group-sm date" id="datePicker">
 
                                                                         <input type="text" class="form-control" id="ddlexpdate" name="date" value="">
                                                                         <span class="input-group-addon">
@@ -273,21 +266,12 @@
                                                                         </span>
                                                                     </div>
                                                                 </div>
-                                                                @*<div class="form-group">
-                            <label for="ddlexpdate">Exp Date</label>
-                            <input type="date" class="form-control" id="ddlexpdate" placeholder="Expire Date">
-                            <span class="error hide req-ddlexpdate font-weight-bold">date requered!</span>
-                        </div>*@
+
                                                             </div>
 
 
 
-                                                            @*<div class="col-md-1">
-                        <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
-                        <div class="clearfix">
-                            <button type="submit" class="btn btn-sm btn-outline-success" id="addTolist"><i class="fas fa-plus"></i></button>
-                        </div>
-                    </div>*@
+
                                                         </div>
 
                                                     </div>
